[tool.poetry]
name = "lanscan"
version = "0.1.0"
description = "lanscan"
authors = ["Fu-Te <37261985+T3pp31@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
netaddr = "^0.8.0"
netifaces = "^0.11.0"
ipaddress = "^1.0.23"
pandas = "^2.0.0"
scapy = "^2.5.0"
tqdm = "^4.65.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
